# sysipc-cpp

./: CMakeLists.txt  README.md
include/sysipc/: base.h  client.h  router.h  server.h  sysipc.h
src/: client.c.h  client.cpp  file_dispatch.cpp  file_dispatch.h  mutex.cpp  mutex.h  router.c.h  router.cpp  server.c.h  server.cpp
test-client/: CMakeLists.txt  main.cpp
test-server/: CMakeLists.txt  arith_handler.cpp  arith_handler.h  main.cpp
